fixed the sign out overflowing problem in the style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ body{
     color: black;
     font-weight: 300;
     width: 100%;
-    padding: 20px 0 20px 0;
+    padding: -10px 0 20px 0;
     border-top: 2px solid rgba(0, 0, 0, 0.08);
     transition: all 0.3s ease;
 }
